@@ -2,11 +2,26 @@
 # vim: filetype=ruby:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
 
 require 'mkmf'
+require 'fileutils'
 
-$CFLAGS = " -W -I ../../cairo/ext "
-$CFLAGS  += `pkg-config --cflags libsvg-cairo`
-$LDFLAGS += `pkg-config --libs   libsvg-cairo`
+pkg = "libsvg-cairo"
+modname = "svgcairo"
+major, minor, micro = 0, 1, 4
 
+check_version = Proc.new do
+  modversion = `#{$PKGCONFIG} --modversion #{pkg}`.chomp
+  ver = modversion.split(".").collect{|item| item.to_i}
+  (0..2).each {|i| ver[i] ||= 0}
+  (ver <=> [major, minor, micro]) >= 0
+end
 
-create_makefile("svgcairo")
+STDOUT.print("checking for #{pkg} version (>= #{major}.#{minor}.#{micro})... ")
 
+if pkg_config(pkg) and check_version.call
+  STDOUT.print("yes\n")
+  $CFLAGS += " -I ../../cairo/ext"
+  create_makefile(modname)
+else
+  STDOUT.print("no\n")
+  FileUtils.rm_f("Makefile")
+end
