@@ -1,3 +1,8 @@
+2005-09-29  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/extconf.rb: check modversion.
+	* packages/svgcairo/ext/extconf.rb: ditto.
+
 2005-09-13  Øyvind Kolås  <pippin@gimp.org>
 
 	Patch from Kouhei Sutou
